tests/type-errors/decl_no_asset_collection.arl
archetype decl_asset_option

asset my_asset {
  id : string;
}

variable a : my_asset collection = []

action exec() {
  effect {
    require (true)
  }
}
